Currently remove -A option in st-wl.desktop (currently not working yet) Fixed errors in st-wl.info

--- a/st-wl.desktop
+++ b/st-wl.desktop
@@ -1,7 +1,8 @@
 [Desktop Entry]
-Name=ST Terminal
+Name=ST-WL Terminal
 Keywords=shell;prompt;command;commandline;cmd;
-Exec=/usr/local/bin/st-wl -A .95
+#Exec=/usr/local/bin/st-wl -A .95
+Exec=/usr/local/bin/st-wl
 Icon=utilities-terminal
 Type=Application
 Categories=GNOME;GTK;System;TerminalEmulator;
