Added xdg decoration (to have a title bar and resizeable borders)

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ xdg-shell-protocol.c
 compile_commands.json
 .cache
 xdg-shell-client-protocol.h
-
+xdg-decoration-protocol.c
+xdg-decoration-protocol.h
