Only do sub-make when needed. By default use parallel build

--- a/wld/Makefile
+++ b/wld/Makefile
@@ -1,6 +1,11 @@
 # wld: Makefile
 
-include config.mk
+CC = gcc
+CFLAGS = -pipe
+
+ENABLE_DEBUG = 0
+
+THISDIR := $(dir $(abspath $(lastword $(MAKEFILE_LIST))))
 
 PREFIX          ?= /usr/local
 LIBDIR          ?= $(PREFIX)/lib
@@ -14,36 +19,20 @@ VERSION_MAJOR   := 0
 VERSION_MINOR   := 0
 VERSION         := $(VERSION_MAJOR).$(VERSION_MINOR)
 
-WLD_LIB_LINK    := libwld.so
-WLD_LIB_SONAME  := $(WLD_LIB_LINK).$(VERSION_MAJOR)
-WLD_LIB         := $(WLD_LIB_LINK).$(VERSION)
-
 CLEAN_FILES     :=
 
-WLD_REQUIRES = fontconfig pixman-1
-WLD_REQUIRES_PRIVATE = freetype2
 WLD_SOURCES =           \
-    buffer.c            \
-    buffered_surface.c  \
-    color.c             \
-    context.c           \
-    font.c              \
-    renderer.c          \
-    surface.c
-WLD_HEADERS = wld.h
+    $(THISDIR)buffer.c            \
+    $(THISDIR)buffered_surface.c  \
+    $(THISDIR)color.c             \
+    $(THISDIR)context.c           \
+    $(THISDIR)font.c              \
+    $(THISDIR)renderer.c          \
+    $(THISDIR)surface.c           \
+    $(THISDIR)pixman.c            \
+    $(THISDIR)wayland.c           \
+    $(THISDIR)wayland-shm.c
 
-ifeq ($(ENABLE_PIXMAN),1)
-    WLD_SOURCES += pixman.c
-    WLD_HEADERS += pixman.h
-endif
-
-ifeq ($(ENABLE_WAYLAND),1)
-    WLD_REQUIRES_PRIVATE += wayland-client
-    WLD_SOURCES += wayland.c
-    WLD_HEADERS += wayland.h
-
-    WLD_SOURCES += wayland-shm.c
-endif
 
 ifeq ($(if $(V),$(V),0), 0)
     define quiet
@@ -55,8 +44,7 @@ else
 endif
 
 WLD_STATIC_OBJECTS  = $(WLD_SOURCES:%.c=%.o)
-WLD_SHARED_OBJECTS  = $(WLD_SOURCES:%.c=%.lo)
-WLD_PACKAGES        = $(WLD_REQUIRES) $(WLD_REQUIRES_PRIVATE)
+WLD_PACKAGES        = fontconfig pixman-1 freetype2 wayland-client
 WLD_PACKAGE_CFLAGS ?= $(call pkgconfig,$(WLD_PACKAGES),cflags,CFLAGS)
 WLD_PACKAGE_LIBS   ?= $(call pkgconfig,$(WLD_PACKAGES),libs,LIBS)
 
@@ -75,15 +63,13 @@ else
     FINAL_CPPFLAGS += -DNDEBUG
 endif
 
-ifeq ($(ENABLE_STATIC),1)
-    TARGETS += libwld.a
-    CLEAN_FILES += $(WLD_STATIC_OBJECTS)
-endif
+TARGETS += libwld.a
+CLEAN_FILES += $(WLD_STATIC_OBJECTS)
 
 CLEAN_FILES += $(TARGETS)
 
 compile     = $(call quiet,CC) $(FINAL_CPPFLAGS) $(FINAL_CFLAGS) -c -o $@ $< \
-              -MMD -MP -MF .deps/$(basename $<).d -MT $(basename $@).o -MT $(basename $@).lo
+              -MMD -MP -MF .deps/$(basename $(notdir $<)).d -MT $(basename $@).o
 link        = $(call quiet,CCLD,$(CC)) $(LDFLAGS) -o $@ $^
 pkgconfig   = $(sort $(foreach pkg,$(1),$(if $($(pkg)_$(3)),$($(pkg)_$(3)), \
                                            $(shell $(PKG_CONFIG) --$(2) $(pkg)))))
@@ -94,39 +80,15 @@ all: $(TARGETS)
 .deps:
 	@mkdir "$@"
 
-%.o: %.c | .deps
+$(THISDIR)%.o $(THISDIR)%.d: $(THISDIR)%.c | .deps
 	$(compile) $(WLD_CPPFLAGS) $(WLD_PACKAGE_CFLAGS)
-
-%.lo: %.c | .deps
-	$(compile) $(WLD_CPPFLAGS) $(WLD_PACKAGE_CFLAGS) -fPIC
 
 libwld.a: $(WLD_STATIC_OBJECTS)
 	$(call quiet,AR) cr $@ $^
-
-$(WLD_LIB): $(WLD_SHARED_OBJECTS)
-	$(link) $(WLD_PACKAGE_LIBS) -shared -Wl,-soname,$(WLD_LIB_SONAME),-no-undefined
-
-$(WLD_LIB_SONAME) $(WLD_LIB_LINK): $(WLD_LIB)
-	$(call quiet,SYM,ln -sf) $< $@
+	@echo $(THISDIR)libwld.a: $(WLD_STATIC_OBJECTS) > .deps/libwld.d
 
 $(foreach dir,LIB PKGCONFIG,$(DESTDIR)$($(dir)DIR)) $(DESTDIR)$(INCLUDEDIR)/wld:
 	mkdir -p $@
-
-.PHONY: install-libwld.a
-install-libwld.a: libwld.a | $(DESTDIR)$(LIBDIR)
-	install -m 644 $< $(DESTDIR)$(LIBDIR)
-
-.PHONY: install-$(WLD_LIB)
-install-$(WLD_LIB): $(WLD_LIB) | $(DESTDIR)$(LIBDIR)
-	install -m 755 $< $(DESTDIR)$(LIBDIR)
-
-.PHONY: install-$(WLD_LIB_LINK) install-$(WLD_LIB_SONAME)
-install-$(WLD_LIB_LINK) install-$(WLD_LIB_SONAME): install-$(WLD_LIB) | $(DESTDIR)$(LIBDIR)
-	ln -sf $(WLD_LIB) $(DESTDIR)$(LIBDIR)/${@:install-%=%}
-
-.PHONY: install
-install: $(TARGETS:%=install-%) | $(foreach dir,LIB PKGCONFIG,$(DESTDIR)$($(dir)DIR)) $(DESTDIR)$(INCLUDEDIR)/wld
-	install -m 644 $(WLD_HEADERS) $(DESTDIR)$(INCLUDEDIR)/wld
 
 .PHONY: clean
 clean:
